monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A2116/A2116c.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A2116;

grammar A2116c {
  A;

  interface B extends A;

}
